--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,5 +87,5 @@ import { Image } from "astro:assets";
       </li>
     </ul>
   </body>
-  <script src="./background-anim.ts"></script>
+  <!-- <script src="./background-anim.ts"></script> -->
 </html>
