days of webgl madness later

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,5 +89,9 @@ import { Image } from "astro:assets";
         and/or debugging across multiple platforms.
       </li>
     </ul>
+    <script>
+      import {main} from "../bg-anim/bg-test";
+      main();
+    </script>
   </body>
 </html>
