--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ import { Image } from "astro:assets";
       </li>
     </ul>
     <script>
-      import {main} from "../bg-anim/bg-test";
+      import {main} from "../bg-anim/bg-main";
       main();
     </script>
   </body>
