re-arrange, add alpha blending

--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,9 +1,9 @@
 ---
-const { what } = Astro.props;
+const { example } = Astro.props;
 ---
 
 <ul>
     <li>About me</li>
     <li>Projects</li>
-    <li>{what}</li>
+    <li>{example}</li>
 </ul>
