fixed logo shrinking on small width

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import { Image } from "astro:assets";
           <Image
             src={githubLogo}
             alt="GitHub Profile"
-            class="gh-logo glow-anim scale-[0.55]"
+            class="gh-logo glow-anim w-12 h-12 mr-4"
           />
         </a>
         <h1 class="text-7xl glow-anim self-center">Aaron Zandt</h1>
