update page title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Site for Aaron :)</title>
+    <title>Aaron Zandt</title>
   </head>
   <body class="min-h-screen bg-gray-950 relative text-white">
     <canvas
