slight padding tweaks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import { Image } from "astro:assets";
       id="bg-canvas"
       class="fixed top-0 left-0 w-screen h-screen block -z-10"></canvas>
     <div
-      class="p-[6vw] inset-0 bg-[radial-gradient(circle_at_top_right,_rgba(139,92,246,0.25),_transparent_70%)]"
+      class="pl-[6vw] pt-[8vh] inset-0 bg-[radial-gradient(circle_at_top_right,_rgba(139,92,246,0.25),_transparent_70%)]"
     >
       <div class="flex">
         <a class="self-center" href="https://github.com/lith-x">
