--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,10 +27,10 @@ import { Image } from "astro:assets";
             class="gh-logo glow-anim w-12 h-12 mr-4"
           />
         </a>
-        <h1 class="text-7xl glow-anim self-center">Aaron Zandt</h1>
+        <h1 class="text-7xl glow-anim self-center font-[SUSE] font-thin">Aaron Zandt</h1>
       </div>
       <br />
-      <div class="max-w-3xl">
+      <div class="max-w-3xl font-[MPLUS1p]">
         <h2 class="text-4xl pb-4">About me</h2>
         <ul class="w-[80%] list-[square] list-outside pl-3.5 pb-7">
           <li class="pb-3.5">
