--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,3 +16,35 @@ a {
   filter: drop-shadow(0 0 4px #6a82fb) drop-shadow(0 0 8px #fc5c7d)
     drop-shadow(0 0 16px #6a82fb);
 }
+
+@font-face {
+  font-family: SUSE;
+  src: url("/fonts/SUSE-VariableFont_wght.ttf") format("opentype");
+  font-weight: 100 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "MPLUS1p";
+  src: url("/fonts/MPLUS1p-Regular.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "MPLUS1p";
+  src: url("/fonts/MPLUS1p-Medium.ttf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "MPLUS1p";
+  src: url("/fonts/MPLUS1p-Bold.ttf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
