add storyboard to projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,9 @@ import { Image } from "astro:assets";
             class="gh-logo glow-anim w-12 h-12 mr-4"
           />
         </a>
-        <h1 class="text-7xl glow-anim self-center font-[SUSE] font-thin">Aaron Zandt</h1>
+        <h1 class="text-7xl glow-anim self-center font-[SUSE] font-thin">
+          Aaron Zandt
+        </h1>
       </div>
       <br />
       <div class="max-w-3xl font-[MPLUS1p]">
@@ -91,6 +93,24 @@ import { Image } from "astro:assets";
               <li>
                 Focus: Clean, efficient solutions with an emphasis on
                 performance and readability.
+              </li>
+            </ul>
+          </li>
+          <li class="pb-3.5">
+            <a
+              class="font-bold italic [font-variant:small-caps]"
+              href="https://github.com/lith-x/storyboard-web"
+              >Storyboard Web App</a
+            > — A WIP all-in-one <a href="https://osu.ppy.sh/">osu!</a> storyboarding
+            platform.
+            <ul class="ml-4 list-[square]">
+              <li>Tech: Svelte, Tailwind, Typescript, PixiJS</li>
+              <li>
+                Focus: Designing an elegant, feature-complete, and
+                platform-independent application that will enable a niche group
+                of creative spirits to more effectively develop <a
+                  href="https://osu.ppy.sh/wiki/en/Storyboard">storyboards</a
+                >.
               </li>
             </ul>
           </li>
