fix linkedin href, format bg-webgl

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import { Image } from "astro:assets";
           <a
             target="_blank"
             rel="noopener noreferrer"
-            href="https://github.com/lith-x"
+            href="https://www.linkedin.com/in/aaron-z-453562a3/"
           >
             <Image
               src={linkedinLogo}
